# EKF_for_Aircraft_Dynamics-

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: aircraft_long_dynamics_dataset.txt
doc/: EKF_for_Aircraft_Dynamics.tex  ref.bib
src/: EKF.cpp  EKF.h  LongDynamics.h  helperFunc.cpp  helperFunc.h  helper_func.cpp  helper_func.h  main.cpp  plot_results.gnuplot
